# xnc

./: AUTHORS  ChangeLog  INSTALL  INSTALL-bin.xnc  Make.common.in  Makefile.in  README.keys  README.md  TODO  WHATS_NEW  acconfig.h  aclocal.m4  configure  configure.in  create.script.in  makebinclean  makebinclean-rpm  makeclean  makedist  makepatch  maketags  mkinstalldirs  newcomp  reconfig  reconfig.in  release.news  replace.script
desktop/: X_Northern_Captain.desktop  xnc-gnome2.desktop  xnc.desktop
doc/: doc1.html  doc2.html  doc3.html  doc4.html  doc5.html  doc6.html  doc7.html  doc8.html  index.html
iconset/: iconset1.c  iconset2.c  makefile.in
other/: ivesini  pwdseq  xncafs  xncafsaix  xncafsopenbsd  xncafstar  xnccfg  xncext  xncini  xncintro  xnckeys  xncmenu
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  README  TRANSLATORS  cs.po  es.po  fr.po  hu.po  it.po  nl.po  pl.po  pt.po  ro.po  ru.po  sp.po  sr.po  xnc.pot
skins/: xnc-lookfive-blue.skin.pal
src/: base_cap.cxx  bookmark.cxx  cmdline.cxx  config_doc.cxx.in  config_file.cxx  config_window.cxx  find.cxx  ftpcfg.cxx  ftpvisuals.cxx  iconsets.cxx  infowin.cxx  inodewin.cxx  internals.cxx  main.cxx  makefile.in  man_page.cxx  menu_process.cxx  panel.cxx  panel_actions.cxx  panel_click.cxx  panel_dnd.cxx  panel_format.cxx  panel_metacall.cxx  panel_vlook.cxx  panel_wrap.cxx  ps_info.cxx  query_windows.cxx  qview.cxx  tartest.cxx  xh.cxx
src/au/: au.cxx  au.h  au_glob.h  au_lex.cxx  au_lex.h  au_stack.h  au_sup.h  au_tree.cxx  au_tree.h  internal_keys.h  key.cxx  key.h  makefile.in  x_actions.h
src/helpers/: data2c.cxx  groups.cxx  makefile.in  resloader.cxx  users.cxx  zips.cxx
src/include/: build.h  c_externs.h  colors.h  commonfuncs.h  comp.h  config.h.in  flist.h  geomfuncs.h  globals.h  history.h  iconsets.h  mesqueue.h  metacaller.h  pwdseq.h  skin.h  systemfuncs.h  types.h  ver.h  xheaders.h  xncdebug.h  xncdirs.h.in
src/include/xnc/: base_cap.h  bookmark.h  cmdline.h  config_file.h  ftpcfg.h  ftpvisuals.h  infowin.h  inodewin.h  internals.h  main.h  menu_process.h  panel.h  panel_x.h  query_windows.h  tartest.h  xh.h  xncversion.h
src/ives/: .ives.cfind  README  dummyfuncs.cxx  editor.cxx  em.c  es.cxx  imview.cxx  imview.h  ives.cxx  ivesserver.cxx  ivesserver.h  ivestruct.h  ivesversion.h  makefile.in  test.ru.koi  viewer.cxx  vs.cxx  xh.h  xh_ives.cxx
src/launch/: lbutton.cxx  lbutton.h  loadmenu.cxx  makefile.in  xh.h  xh_launch.cxx  xnlaunch.cxx
src/lib/: makefile.in
src/lib/filedir/: LEGAL.NOTICE  MAINT  PORTING  README  apprentice.c  ascmagic.c  compress.c  file.c  file.h  file.man  fsmagic.c  is_tar.c  magic.man  makefile.in  names.h  patchlevel.h  print.c  readelf.h  softmagic.c  tar.h
src/lib/image2/: convert.cxx  image.cxx  image.h  makefile.in  picinfo.h
src/lib/image2/libpcd/: file.c  huff.c  inter.c  pcd.h  pcdr.c  yuv2rgb.c
src/lib/image2/sdl_image/: IMG_gif.c  IMG_jpg.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_tga.c  IMG_tif.c  IMG_xpm.c  SDL.h  SDL_bmp.c  SDL_byteorder.h  SDL_endian.c  SDL_endian.h  (+10 more)
src/lib/jpeg/: cderror.h  cdjpeg.h  configure  jchuff.h  jdct.h  jdhuff.h  jerror.h  jinclude.h  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  jversion.h  makefile.cfg
src/lib/libpng/: makefile.in  png.h  pngconf.h
src/lib/manage/: baseguiplugin.cxx  baseguiplugin.h  configman.cxx  configman.h  dircacheman.cxx  dircacheman.h  guiplugin.cxx  guiplugin.h  iconman.cxx  iconman.h  ivesclient.cxx  ivesclient.h  ivesdata.h  makefile.in  mouse_actions.cxx  mouse_actions.h  plugin.h  pluginman.cxx  pluginman.h  xdndclass.cxx  xdndclass.h  xshrloader.cxx  xshrloader.h
src/lib/northgui/: exwin.cxx  exwin.h  filebrowser.cxx  filebrowser.h  gui.cxx  gui.h  gui_base.h  gui_input.cxx  gui_input.h  gui_key.cxx  gui_key.h  gui_menu.cxx  gui_menu.h  gui_pan.h  gui_switch.cxx  gui_switch.h  gui_text.cxx  gui_text.h  gui_win.cxx  gui_win.h  guilocale.cxx  guilocale.h  imload.cxx  imload.h  list_utils.cxx  makefile.in  northcolors.cxx  pager.cxx  pager.h  pan.cxx  qhelp.cxx  qhelp.h  scroll.cxx  scroll.h
src/lib/rxvt2/: VERSION.h  command.c  command.h  debug.c  debug.h  defaults.h  feature.h  graphics.h  grkelot.c  grkelot.h  main.h  makefile.in  menubar.h  misc.h  netdisp.c  rmain.c  rxvtgrx.h  screen.c  screen.h  screen.my.c  scrollbar.c  scrollbar.h  utmp.c  xdefaults.c  xdefaults.h
src/lib/tool/: commonfuncs.cxx  flist.cxx  geomfuncs.cxx  history.cxx  makefile.in  systemfuncs.cxx  xncdebug.c
src/lib/vfs/: afs.cxx  dfs.cxx  ftpfs.cxx  ftpfs.h  makefile.in  vfs.cxx  vfs.h
src/lib/xbitmaps/: a1.xbm  a2.xbm  arc.c  arcm.xbm  assoc.c  assocm.xbm  banmask.xbm  box.xbm  bv1.xbm  cc.xbm  center.xbm  cir.xbm  cir1.xbm  cir2.xbm  cir3.xbm  cir4.xbm  cir5.xbm  cir6.xbm  cir7.xbm  compm.xbm  dnd1.xbm  dnd1m.xbm  dnd2.xbm  dnd2m.xbm  down.xbm  earth.xbm  exec.c  execm.xbm  flag1.c  flag2.c  flag3.c  flag4.c  flag5.c  flag6.c  flag7.c  folder.c  foldm.xbm  gl.xbm  history.xbm  iconset1mask.xbm  (+36 more)
src/lib/zlib/: Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  infblock.h  infcodes.h  inffast.h  inffixed.h  inftrees.h  infutil.h  minigzip.c  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
src/plugins/: makefile.in
src/plugins/aqua/: aquafuncs.cxx  aquafuncs.h  aquageom.cxx  aquageom.h  aquagui.cxx  aquagui.h  aquapanel.cxx  aquaplugin.cxx  aquaplugin.h  aquaskin.c  makefile.in  xnciniaqua.c
src/plugins/common/: iplugin.c  makefile.in  plugincln.h
src/plugins/five/: fivefuncs.cxx  fivefuncs.h  fivegeom.cxx  fivegeom.h  fivegui.cxx  fivegui.h  fivepanel.cxx  fiveplugin.cxx  fiveplugin.h  fiveskin.c  makefile.in  xncinifive.c
src/plugins/theme/: guistyle.cxx  guistyle.hxx  makefile.in  themeparse.cxx  themeparse.hxx  themetypes.hxx
src/xjroot/: README  makefile.in  xjpegroot.cxx
src/xsetup/: README  dummyfuncs.cxx  makeconfigs  makefile.in  setup.cxx  sfiles.c  xh.h  xh_setup.cxx  xnc_ico.xpm
yo-man/: iedit.1  iedit.yo  ives.1  ives.yo  iview.1  iview.yo  xjpegroot.1  xjpegroot.yo  xnc.1  xnc.yo  xnlaunch.1
(+20 files in other folders)
